# ewms-pilot

./: CHANGELOG.md  Dockerfile  Dockerfile_example  Dockerfile_nats_prealpha  Dockerfile_prealpha  Dockerfile_pulsar_prealpha  Dockerfile_rabbitmq_prealpha  README.md  entrypoint.sh  pyproject.toml  requirements-all.txt  requirements-gcp.txt  requirements-nats.txt  requirements-pulsar.txt  requirements-rabbitmq.txt  requirements-test.txt  requirements.txt  setup.cfg
.github/workflows/: image-publish.yml  wipac-cicd.yml
ewms_pilot/: __init__.py  __main__.py  config.py  housekeeping.py  htchirp_tools.py  mq.py  pilot.py  task.py  temp  utils.py
ewms_pilot/init_container/: init_container.py
ewms_pilot/tasks/: io.py  map.py  task.py  wait_on_tasks.py
ewms_pilot/utils/: runner.py  subproc.py  utils.py
examples/: do_task.py  example.py
tests/: run-broker.sh  test_pilot.py  wait-on-pids.sh
tests/integration/: run-broker.sh  test_pilot.py
tests/unit/: test_log_parser.py
