[wipac:cicd_setup_builder]
pypi_name = ewms-pilot
python_min = 3.6
author = WIPAC Developers
author_email = developers@icecube.wisc.edu
keywords_spaced = EWMS pilot message passing MQ task interface API

[options]
install_requires =
    asyncstdlib
    wipac-mqclient-pulsar
python_requires = >=3.6, <3.11
packages = find:

[options.extras_require]
pulsar =
    wipac-mqclient-pulsar
rabbitmq =
    wipac-mqclient-rabbitmq
gcp =
    wipac-mqclient-gcp
nats =
    wipac-mqclient-nats